[package]
name = "bevy_sort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_flycam = "*"
rand = "0.8"
wasm-bindgen = "0.2"
bevy_atmosphere = "0.2"

[dependencies.bevy]
version = "0.6"
default-features = false
# These are the remaining default features other than `bevy_audio` and `mp3`
features = [
    "render",
    "bevy_winit",
    "bevy_gilrs",
    "hdr",
    "filesystem_watcher",
    "x11",
]

[dependencies.bevy_kira_audio]
version = "0.8"
# `ogg` format support is enabled by default, disable if you don't want it
default-features = false
# enable the features you care about
features = ["ogg"]

[profile.release]
lto = "thin"
